--- a/package.json
+++ b/package.json
@@ -23,7 +23,14 @@
     "@nestjs/common": "^6.7.2",
     "@nestjs/config": "^0.2.2",
     "@nestjs/core": "^6.7.2",
+    "@nestjs/jwt": "^6.1.1",
+    "@nestjs/mongoose": "^6.3.1",
     "@nestjs/platform-express": "^6.7.2",
+    "bcrypt": "^3.0.8",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.11.0",
+    "express-session": "^1.17.0",
+    "mongoose": "^5.9.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.3"
