--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bcrypt": "^3.0.8",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
+    "dotenv": "^8.2.0",
     "express-session": "^1.17.0",
     "mongoose": "^5.9.1",
     "reflect-metadata": "^0.1.13",
